--- a/src/components/actions/actions.css
+++ b/src/components/actions/actions.css
@@ -2,8 +2,10 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  background-color: #e5e5f795;
-  opacity: 1 !important;
+  /* background-color: #e5e5f795; */
+  /* opacity: 1 !important; */
+  /* border: 5px solid red; */
+  border-radius: 3% !important;
 }
 
 .actionlist-container-column {
@@ -91,7 +93,7 @@
   background-color: #dcdce6;
   flex: 0;
   width: 100%;
-  margin: 5px 3px 5px 3px !important ;
+  margin: 5px 2px 1px 2px !important ;
   min-height: 2rem;
 }
 
