--- a/src/components/totals/totals.css
+++ b/src/components/totals/totals.css
@@ -1,6 +1,6 @@
 .totals-container {
   height: 100%;
-  background-color: #e5e5f795;
+  /* background-color: #e5e5f795; */
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -8,6 +8,7 @@
   overflow-x: hidden;
   align-items: center;
   text-align: center;
+  border-radius: 3% !important;
 }
 
 .categorytotals-item {
